--- a/wp-content/themes/stacylauren/sass/variables-site/_colors.scss
+++ b/wp-content/themes/stacylauren/sass/variables-site/_colors.scss
@@ -18,3 +18,17 @@ $color__border-button-hover: #ccc #bbb #aaa;
 $color__border-button-focus: #aaa #bbb #bbb;
 $color__border-input: #ccc;
 $color__border-abbr: #666;
+
+
+$yellow:        #FCEE21;
+$lime-green:    #D9E021;
+$green:         #8CC63F;
+$teal:          #00B0B0;
+$mutedteal:     #75b691;
+$purple:        #93278F;
+$pink:          #D4145A;
+$mauve:         #946a6c;
+$orange:        #de9a18;
+$gray:          #626262;
+$lightgray:     #e3e3e3;
+$silver:        #495E67;
