--- a/wp-content/themes/stacylauren/sass/variables-site/_typography.scss
+++ b/wp-content/themes/stacylauren/sass/variables-site/_typography.scss
@@ -1,3 +1,8 @@
+$primary-font:	'Open Sans', Helvetica, Arial, sans-serif;
+$secondary-font:	'Montserrat', Helvetica, Arial, sans-serif;
+$accent-font: 'Covered By Your Grace', serif; 
+
+
 $font__main: sans-serif;
 $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", Courier, monospace;
