--- a/wp-content/themes/stacylauren/sass/style.scss
+++ b/wp-content/themes/stacylauren/sass/style.scss
@@ -66,6 +66,11 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 @import "forms/forms";
 
 /*--------------------------------------------------------------
+# Layout
+--------------------------------------------------------------*/
+@import "layout/layout";
+
+/*--------------------------------------------------------------
 # Navigation
 --------------------------------------------------------------*/
 @import "navigation/navigation";
