--- a/wp-content/themes/stacylauren/sass/typography/_headings.scss
+++ b/wp-content/themes/stacylauren/sass/typography/_headings.scss
@@ -26,3 +26,13 @@ h5 {
 h6 {
 	font-size: 1.6em;
 }
+
+h1, h2, h3, h4 {
+ 	font-family: $secondary-font;
+ 	text-transform: uppercase;
+ 	letter-spacing: .1em;
+ }
+ 
+ h3, h4 {
+ 	color: $green;
+ }
