--- a/wp-content/themes/stacylauren/sass/layout/_header.scss
+++ b/wp-content/themes/stacylauren/sass/layout/_header.scss
@@ -3,6 +3,7 @@
 	padding: 15px 0;
 	position: fixed;
 	width: 100%;
+	height: 62px;
 	z-index: 5000;
 	a {
     font-family: $secondary-font;
@@ -32,10 +33,10 @@
 }
 
 .branding-container {
-    width: 75%;
+    /*width: 75%;*/
     height: 30px;
     float: left;
-    padding-left: 85px;
+    /*padding-left: 35px;*/
     a {
     	font-size: 1.2em;
     }
@@ -44,10 +45,10 @@
     	width: 35px;
     	margin-right: 15px;
     }
-     @media ($screen-xs) {
+     /*@media ($screen-xs) {
         width: 70%;
 		padding-left: 0;
-	}
+	}*/
 }
 
 /*.site-header {
@@ -81,13 +82,13 @@
 }
 
 .social-container {
-    width: 25%;
+    /*width: 25%;*/
     float: right;
     box-sizing: border-box;
     padding: 5px 0 0 0;
     position: fixed;
-    right: 0;
-    @media ($screen-xs) {
+    right: 15px;
+    /*@media ($screen-xs) {
         width: 30%;
 		padding: 5px 0 0 0;
 	}
